Fix jdk.internal.misc.Unsafe